@@ -1,3 +1,10 @@
+2021-06-11  Chris Dumez  <cdumez@apple.com>
+
+        Unreviewed small API test failure fix after r278786.
+
+        * TestWebKitAPI/Tests/WebKitCocoa/LocalStoragePersistence.mm:
+        (TEST):
+
 2021-06-11  Alex Christensen  <achristensen@webkit.org>
 
         Partition CrossOriginPreflightResultCache by SessionID
